@@ -1211,7 +1211,7 @@ VOID WarnIfLegacyProblems (VOID) {
                 L"         lacks the necessary Compatibility Support Module (CSM) support or that support\n"
                 L"         is disabled in your firmware.";
 
-            if (!GlobalConfig.SilentBoot) {
+            if (!GlobalConfig.DirectBoot) {
                 REFIT_CALL_2_WRAPPER(gST->ConOut->SetAttribute, gST->ConOut, ATTR_ERROR);
                 PrintUglyText (MsgStr, NEXTLINE);
                 REFIT_CALL_2_WRAPPER(gST->ConOut->SetAttribute, gST->ConOut, ATTR_BASIC);
